--- a/public/style.css
+++ b/public/style.css
@@ -1,1 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap');
+
+.htmx-indicator{
+    opacity:0;
+    transition: opacity 500ms ease-in;
+}
+.htmx-request .htmx-indicator{
+    opacity:1;
+    animation: spin 5s infinite;
+    z-index: 10;
+}
+.htmx-request.htmx-indicator{
+    opacity:1;
+    z-index: 10;
+}
+
+@keyframes spin {
+    50% {transform: rotate(360);}
+  }
