--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap');
 
 .htmx-indicator{
+    color: white;
     opacity:0;
     transition: opacity 500ms ease-in;
 }
